# loom

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: basic.frag  basic.vert
assets/shaders/: basic.frag  basic.vert  light.frag  texture.frag
src/: main.c
src/editor/: editor.c  editor.h  imgui_bridge.cpp  imgui_bridge.h
src/engine/: camera.c  camera.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/utils/: util.c  util.h
